--- a/UI/showCoffee.ui
+++ b/UI/showCoffee.ui
@@ -24,7 +24,7 @@
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="pushButton_showCoffee">
       <property name="text">
        <string>Показать</string>
       </property>
@@ -32,6 +32,13 @@
     </item>
     <item row="1" column="0">
      <widget class="QTableWidget" name="tableWidget"/>
+    </item>
+    <item row="2" column="0">
+     <widget class="QPushButton" name="pushButton_addCoffee">
+      <property name="text">
+       <string>Добавить</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
